// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scale to match snapshot 1`] = `
<ul
  class="range-slider__scale"
>
  <li
    class="range-slider__scale__item"
    style="left: 25%;"
  >
    <button
      class="range-slider__scale__button"
      type="button"
    >
      first
    </button>
  </li>
  <li
    class="range-slider__scale__item"
    style="left: 45%;"
  >
    <button
      class="range-slider__scale__button"
      type="button"
    >
      second
    </button>
  </li>
  <li
    class="range-slider__scale__item"
    style="left: 75%;"
  >
    <button
      class="range-slider__scale__button"
      type="button"
    >
      third
    </button>
  </li>
</ul>
`;

exports[`ScaleItem to match snapshot 1`] = `
<li
  class="range-slider__scale__item"
  style="left: 25%;"
>
  <button
    class="range-slider__scale__button"
    type="button"
  >
    button text
  </button>
</li>
`;

exports[`ScaleItemButton to match snapshot 1`] = `
<button
  class="range-slider__scale__button"
  type="button"
>
  button text
</button>
`;
